welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  while (!fonctionTest()) {
    serpent()
  }
  
  def fonctionTest() {
    if (estFaceMur() && getDirection() == Direction.OUEST) {
      droite()
      return estFaceMur()
    }
    if (estFaceMur() && getDirection() == Direction.EST) {
      gauche()
      return estFaceMur()
    }
    return false
  }
def serpent() {  
    if (!estFaceMur()) {
      avance()
    } else {
      if (getDirection() == Direction.OUEST) {
        droite()
        avance()
      }
      if (getDirection() == Direction.EST) {
        gauche()
        avance()
      }
    }
}
}